# ChangeLog for net-misc/openssh
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.251 2007/08/04 05:13:07 metalgod Exp $

  04 Aug 2007; <metalgod@gentoo.org> openssh-4.0_p1-r2.ebuild,
  openssh-4.1_p1-r1.ebuild, openssh-4.5_p1-r2.ebuild,
  openssh-4.6_p1-r2.ebuild:
  Stable on amd64. See security bug #183958.

  02 Aug 2007; Raúl Porcel <armin76@gentoo.org> openssh-4.5_p1-r2.ebuild,
  openssh-4.6_p1-r2.ebuild:
  x86 stable, no idea why i didn't stabilize them

  23 Jul 2007; Mike Frysinger <vapier@gentoo.org> openssh-4.2_p1-r1.ebuild,
  openssh-4.3_p2-r5.ebuild, openssh-4.4_p1-r6.ebuild, openssh-4.5_p1.ebuild,
  openssh-4.5_p1-r1.ebuild, openssh-4.5_p1-r2.ebuild:
  Punt bindnow-flags usage.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  openssh-4.3_p2-r5.ebuild:
  Drop virtual/x11 references.

  21 Jul 2007; Joseph Jezak <josejx@gentoo.org> openssh-4.0_p1-r2.ebuild,
  openssh-4.1_p1-r1.ebuild, openssh-4.5_p1-r2.ebuild,
  openssh-4.6_p1-r2.ebuild:
  Marked ppc/ppc64 stable for bug #183958.

  10 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  openssh-4.0_p1-r2.ebuild, openssh-4.1_p1-r1.ebuild:
  Stable on sparc wrt #183958

  07 Jul 2007; Raúl Porcel <armin76@gentoo.org> openssh-4.0_p1-r2.ebuild,
  openssh-4.1_p1-r1.ebuild:
  alpha/ia64/x86 stable wrt #183958

  07 Jul 2007; Joshua Kinard <kumba@gentoo.org> openssh-4.0_p1-r2.ebuild,
  openssh-4.1_p1-r1.ebuild, openssh-4.5_p1-r2.ebuild,
  openssh-4.6_p1-r2.ebuild:
  Stable on mips, per #183958.

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> openssh-4.5_p1-r2.ebuild,
  openssh-4.6_p1-r2.ebuild:
  alpha/ia64 stable wrt #183958

  04 Jul 2007; Jeroen Roovers <jer@gentoo.org> openssh-4.6_p1-r2.ebuild:
  Stable for HPPA (bug #183958).

  04 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  openssh-4.5_p1-r2.ebuild, openssh-4.6_p1-r2.ebuild:
  Stable on sparc wrt #183958
