@@ -198,6 +198,7 @@ DIST openssh-4.5p1-hpn12v15.diff.gz 15834 RMD160 c98135bfd8b8387b281d63f9d9b00af
 DIST openssh-4.5p1.tar.gz 965925 RMD160 3f70b6f4228e84c7b9b8b3bee7fd3875f3e3bad3 SHA1 2eefcbbeb9e4fa16fa4500dec107d1a09d3d02d7 SHA256 7046b9d372f9e31ca654a66492310c188470480ddab300eb715dbf5e2177ae55
 DIST openssh-4.6p1+x509-5.5.2.diff.gz 141892 RMD160 3aacab881f28b7e8087481a6fcf661f67502319b SHA1 5210b31d70b61278007b5a12543e9834fe90ac71 SHA256 b365d2819ba1f81411382106629b8fe74ae5aa4a1081aa8e3c44858c115c822e
 DIST openssh-4.6p1-hpn12v16.diff.gz 15944 RMD160 421e2c189c2e9b378f6ee3944183355f9f18d5e8 SHA1 a10ed53ad92e2e3106da7050c3b0076a2cd1c0ca SHA256 f304e3b04e2772c27c09e9aa5a3fd02747187a8775de39879c3d871fad1e156f
+DIST openssh-4.6p1-hpn12v17.diff.gz 16145 RMD160 bf418d8274a3b3c631d1f6db217f1d879046599f SHA1 8a401c329e0777398c4371c0746a63e1d9690469 SHA256 61438f6dc8959b038dee4fb365fe79b749053ccc149e768cdb73cb9c8740360b
 DIST openssh-4.6p1.tar.gz 967395 RMD160 2959ac56c9175275bf82847ec64b2b169aedcb82 SHA1 b2aefeb1861b4688b1777436035239ec32a47da8 SHA256 7bbe277faa80c8d8d9cb96111db65fc0007d451784cc459207cd46b746a6f23a
 DIST openssh-lpk-3.9p1-0.3.6.patch 60920 RMD160 0fdde5cf35e1fe59a428d330509f6964ff3402ed SHA1 cd0e8f4a9826e2883f5fc4cce41a761750657414 SHA256 f4732659ec8e222a8d80741a8e7975ffde089ab985fcad3c986d087732de7c33
 DIST openssh-lpk-4.0p1-0.3.6.patch 60557 RMD160 da57dcc8078c127abea0dc4017399cd5c3f8eee2 SHA1 f0fa0cfa6505b12da250a25115839210138defbc SHA256 61b244eb4c15db9c1a9b575be23afcbe6a30a248a2abbda0de18f0791842dbad
@@ -205,6 +206,7 @@ DIST openssh-lpk-4.1p1-0.3.6.patch 60312 RMD160 489d8be3b66ad5dad4b23fa61b9423be
 DIST openssh-lpk-4.3p1-0.3.7.patch 60451 RMD160 fda93b8ee3ef9b633947784fe84a9eed2acbd325 SHA1 ba557b6a070e47990eb085c5a89cdfbe089ab6d3 SHA256 0bcfa28804caf685de2248ddc966666196f6df81d1d058066f2da17714518af4
 DIST openssh-lpk-4.4p1-0.3.7.patch 61187 RMD160 90b0bbe07a3617f6eecb9f77c1a38c5f4dd4dcaf SHA1 b1854a4391c5d11f1a5ab09059643bbaf2278009 SHA256 c74aa642b4b2eeceb0c3f554752d172f8d5a7cd30f2aae517e93ef3bf1bd24e7
 DIST openssh-lpk-4.5p1-0.3.8-no-configure.patch 58327 RMD160 464eb3e29f77d2d1e9785ea7cbae5c6d6bb0aff5 SHA1 5020b325b845de131236a489f2bbf19da64aff6e SHA256 ffbd706fb543709d1be0d37af50de561ed9a4271508f0df3b951d6a1db5eb1eb
+DIST openssh-lpk-4.6p1-0.3.9.patch 61605 RMD160 1bf1830192c3eba43c66c3c6469740724cb1ecf2 SHA1 2d0d41f6913d6e899e58a4b569afa30aadf82092 SHA256 e12335e8bf020508ea3866db07b306f4c965e3f9de262c06f62fad494e93107e
 EBUILD openssh-3.9_p1-r3.ebuild 4984 RMD160 fc6e960460f5ed80f38de0ad62844786906a40dc SHA1 bb12ded4a10fb951c5c37da969225b672ccc5f38 SHA256 243071563d56d49415ecdd850291e0ba005db6dd6c3a90f3b33b727de3990686
 MD5 4bf2ed1ba4e71ff7a799b27f958b8214 openssh-3.9_p1-r3.ebuild 4984
 RMD160 fc6e960460f5ed80f38de0ad62844786906a40dc openssh-3.9_p1-r3.ebuild 4984
@@ -241,18 +243,18 @@ EBUILD openssh-4.5_p1.ebuild 5266 RMD160 9243cd52822be5d2de2f4093a75553d17b1e1d5
 MD5 77d37ff2637f4b7ce39bd3a4b9cc969c openssh-4.5_p1.ebuild 5266
 RMD160 9243cd52822be5d2de2f4093a75553d17b1e1d57 openssh-4.5_p1.ebuild 5266
 SHA256 83a68bb6cf20edbe2366697a5e4de41fc917c7c0c43ab39a3c86d8971d86d96a openssh-4.5_p1.ebuild 5266
-EBUILD openssh-4.6_p1-r1.ebuild 5401 RMD160 087c1690db51065044c39021584823a9c96d1a64 SHA1 39e14838dd91fcce4469f96eac51bf41160ac04d SHA256 78e9eb40838b939795e0ebf639ca5941a2c31b5ec3498b880772d20341710fa9
-MD5 f4436c44ac993ac9954dfeb532f2b1b9 openssh-4.6_p1-r1.ebuild 5401
-RMD160 087c1690db51065044c39021584823a9c96d1a64 openssh-4.6_p1-r1.ebuild 5401
-SHA256 78e9eb40838b939795e0ebf639ca5941a2c31b5ec3498b880772d20341710fa9 openssh-4.6_p1-r1.ebuild 5401
 EBUILD openssh-4.6_p1-r2.ebuild 5392 RMD160 fd2170cb4412591572f81f7de45728cde75dcd44 SHA1 1e779d386fb8304e6fb2090bde43bd45be4a6b23 SHA256 fe6e0c79e78a383a1e3b7ec40c9d25b0af5f68f320e3d4bbac0bf97064266e3f
 MD5 9e9520f4cd45858557a9c7c0e164916a openssh-4.6_p1-r2.ebuild 5392
 RMD160 fd2170cb4412591572f81f7de45728cde75dcd44 openssh-4.6_p1-r2.ebuild 5392
 SHA256 fe6e0c79e78a383a1e3b7ec40c9d25b0af5f68f320e3d4bbac0bf97064266e3f openssh-4.6_p1-r2.ebuild 5392
-MISC ChangeLog 39797 RMD160 42340d29b05e9ac4b6b5f1ebf53bb8782373e8dc SHA1 b0f46895e42e81d2873314a65956d9f6d7ba525a SHA256 1c650255cc125c7d35ae7eb3134694e9e037dc62a40fd6e6e59c1c337a28e1d3
-MD5 1aef30880ef9913cdb9e75e1449fcb5d ChangeLog 39797
-RMD160 42340d29b05e9ac4b6b5f1ebf53bb8782373e8dc ChangeLog 39797
-SHA256 1c650255cc125c7d35ae7eb3134694e9e037dc62a40fd6e6e59c1c337a28e1d3 ChangeLog 39797
+EBUILD openssh-4.6_p1-r3.ebuild 5390 RMD160 f55f1ca226614f0ccf4c0dae04e3b9c1b1e6de0d SHA1 4cc45457fcfd102e85f7f7bc788258d41a0973c5 SHA256 22882343c576b93e21f2dbe241896dd95837ff464e487c1f000269fdbb077db7
+MD5 0e8d64a10bcee6f3402d9a3401b1cd4e openssh-4.6_p1-r3.ebuild 5390
+RMD160 f55f1ca226614f0ccf4c0dae04e3b9c1b1e6de0d openssh-4.6_p1-r3.ebuild 5390
+SHA256 22882343c576b93e21f2dbe241896dd95837ff464e487c1f000269fdbb077db7 openssh-4.6_p1-r3.ebuild 5390
+MISC ChangeLog 39941 RMD160 c1f95dd3bdd34ee6051046326ab1d083dfbbf9c9 SHA1 acc0bea8eae00d1c450847ed165a26ff3c601146 SHA256 9af121f71bed9a2f6ea93f9070a3eab7a0ee088eda97c030606c146871a8854a
+MD5 d3d04ded73b736860191b0f64655ee57 ChangeLog 39941
+RMD160 c1f95dd3bdd34ee6051046326ab1d083dfbbf9c9 ChangeLog 39941
+SHA256 9af121f71bed9a2f6ea93f9070a3eab7a0ee088eda97c030606c146871a8854a ChangeLog 39941
 MISC metadata.xml 1287 RMD160 9be6778c10712b2613792647256f309898f52828 SHA1 38d05973334ed37cb9ee3778df3cf3b1369b6b81 SHA256 fbd731005f40dec6baf09aae0ba15a994e1ae448f4aa70ecd078db4b1a2feda3
 MD5 d536c311ded25994241e9708f293c9f7 metadata.xml 1287
 RMD160 9be6778c10712b2613792647256f309898f52828 metadata.xml 1287
@@ -284,16 +286,16 @@ SHA256 86a17c74dd503363c30085c75f7cc17bda20da889e93d61d59446589992cc08b files/di
 MD5 15fe08918cde242210111d03a3ed1e7e files/digest-openssh-4.5_p1-r2 1370
 RMD160 8331cb78dc88205280d7972879fec185285d9f8d files/digest-openssh-4.5_p1-r2 1370
 SHA256 b7fdf1272101d669ed17d224ba44ccd6d59bda66ac82a08042a29898d2be4fe3 files/digest-openssh-4.5_p1-r2 1370
-MD5 262614ee697fea204407027184ed83fc files/digest-openssh-4.6_p1-r1 786
-RMD160 4dca2db674acc3f2ee39d304e1a5add2004fe871 files/digest-openssh-4.6_p1-r1 786
-SHA256 155a2bda9084c47e1e7df6b2ed84cd947b7f6511c6c6a09a1a4620eb7d587e9a files/digest-openssh-4.6_p1-r1 786
 MD5 262614ee697fea204407027184ed83fc files/digest-openssh-4.6_p1-r2 786
 RMD160 4dca2db674acc3f2ee39d304e1a5add2004fe871 files/digest-openssh-4.6_p1-r2 786
 SHA256 155a2bda9084c47e1e7df6b2ed84cd947b7f6511c6c6a09a1a4620eb7d587e9a files/digest-openssh-4.6_p1-r2 786
+MD5 b44a2d9a9f14d872853cbae7c2f88d02 files/digest-openssh-4.6_p1-r3 1051
+RMD160 87dedd6d23c67349300f83492937320aa5736e62 files/digest-openssh-4.6_p1-r3 1051
+SHA256 21cd53d18dc04f1321b2e9e948befdd8bb705dc8c3e9d4678d5c643e7bba5ec6 files/digest-openssh-4.6_p1-r3 1051
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.5 (GNU/Linux)
 
-iD8DBQFGtArqwUpWvClEHQoRAmAPAJ9K4EYqitjz2BpIofLQ+KT3dDuYeACfSawT
-qUHBKOV3E491SNCCzdJnu2E=
-=MX83
+iD8DBQFGtoKap/wUKkr7RBoRAsaMAJ9Pq9uEGSjO0OopqMe0IEO+F17JDQCguZVG
+PKYE8TI+DLsCZszAX43fZT4=
+=dFoG
 -----END PGP SIGNATURE-----
