@@ -1,0 +1,12 @@
+MD5 dd32128b216cc097b3018f255620394b openssh-4.6p1+x509-5.5.2.diff.gz 141892
+RMD160 3aacab881f28b7e8087481a6fcf661f67502319b openssh-4.6p1+x509-5.5.2.diff.gz 141892
+SHA256 b365d2819ba1f81411382106629b8fe74ae5aa4a1081aa8e3c44858c115c822e openssh-4.6p1+x509-5.5.2.diff.gz 141892
+MD5 d5d4148c985c58a8784048edae9d8866 openssh-4.6p1-hpn12v17.diff.gz 16145
+RMD160 bf418d8274a3b3c631d1f6db217f1d879046599f openssh-4.6p1-hpn12v17.diff.gz 16145
+SHA256 61438f6dc8959b038dee4fb365fe79b749053ccc149e768cdb73cb9c8740360b openssh-4.6p1-hpn12v17.diff.gz 16145
+MD5 6a7fa99f44d9e1b5b04d15256e1405bb openssh-4.6p1.tar.gz 967395
+RMD160 2959ac56c9175275bf82847ec64b2b169aedcb82 openssh-4.6p1.tar.gz 967395
+SHA256 7bbe277faa80c8d8d9cb96111db65fc0007d451784cc459207cd46b746a6f23a openssh-4.6p1.tar.gz 967395
+MD5 f43a8aae7d69e72f0ec07bc96e46b328 openssh-lpk-4.6p1-0.3.9.patch 61605
+RMD160 1bf1830192c3eba43c66c3c6469740724cb1ecf2 openssh-lpk-4.6p1-0.3.9.patch 61605
+SHA256 e12335e8bf020508ea3866db07b306f4c965e3f9de262c06f62fad494e93107e openssh-lpk-4.6p1-0.3.9.patch 61605
